# spader

./: .env  .gitignore  .pre-commit-config.yaml  development.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: add-to-project.yml
backend/: .env  .gitignore  Dockerfile  config.py  dependencies.py  main.py  pyproject.toml  settings.py  test_main.http  worker.py
backend/ecloudsdk/: test.py
backend/providers/: ecloud.py  interface.py
backend/routers/: instances.py  oidc.py  types.py  users.py  workspaces.py
backend/services/: active_record.py  auth.py  billing.py  cache.py  celery.py  common.py  db.py  db_accelerator.py  lago.py  logger.py  logging.py  lru_resource_cache.py  notification.py  payment.py  security.py  test_utils.py  utils.py
backend/test/: test_alipay.py  test_alipay_query.py  test_billing_coupon.py
frontend/: README.md  index.html  kubb.config.ts  modify-openapi-operationids.js  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  useInvalidationForMutation.ts
frontend/src/components/: app-shell.tsx  coming-soon.tsx  nav.tsx  providers.tsx  search.tsx  sidebar.tsx  signup-success.tsx  theme-provider.tsx  user-nav.tsx
frontend/src/core/: ApiError.ts
frontend/src/data/: sidelinks.tsx
frontend/src/hooks/: use-auth.ts  use-check-active-nav.tsx  use-custom-toast.ts  use-interval.tsx  use-setting.ts  use-watch.tsx  use-workspace.ts
frontend/src/utils/: zod.ts  (+6 more)
lago/: .env  docker-compose.yml  license.rb
scripts/: generate-client.sh
(+70 files in other folders)
