[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "argon2-cffi>=23.1.0",
    "async-lru>=2.0.4",
    "email-validator>=2.2.0",
    "fastapi>=0.115.4",
    "phonenumbers>=8.13.49",
    "pydantic>=2.9.2",
    "pydantic-extra-types>=2.10.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "sqlmodel>=0.0.22",
    "uuid>=1.30",
    "uuid6>=2024.7.10",
    "uvicorn>=0.32.0",
    "fakeredis>=2.26.1",
    "greenlet>=3.1.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.1",
    "aiosmtplib>=3.0.2",
    "celery[redis]>=5.4.0",
]
